# fem

./: .gitignore  main.py  pyproject.toml
src/fem_app/core/: boundary.py  derivatives.py  mesh.py  solver.py  stiffness.py
src/fem_app/ui/: array_viewer.py  defiabg.txt  main_window.py  visualization.py
src/fem_app/utils/: helpers.py
src/tests/core/: test_derivatives.py  test_mesh.py  test_stiffness.py  verify_jacobians.py
src/tests/mocks/: yakobians_0_0.csv  yakobians_0_1.csv  yakobians_0_2.csv
