[tool.poetry]
name = "fem-project"
version = "0.1.0"
description = ""
authors = ["Andrii Kosach <andrii.kosach@altoida.com>"]
readme = "README.md"
packages = [{include = "fem_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
scipy = "^1.15.2"
matplotlib = "^3.10.0"
pyvista = "^0.44.2"
pyvistaqt = "^0.11.2"
numba = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
